# Poetype

./: .gitignore  LICENSE  Makefile  README.md  RESTRUCTURING_SUMMARY.md  app.py  env.example  pyproject.toml  requirements.txt  setup.py
instance/: database.db
migrations/versions/: c56d13cda670_initial_migration.py
src/: __init__.py  commands.py  config.py  database.db  ext.py
src/admin/: __init__.py  views.py
src/models/: __init__.py  author.py  base.py  poem.py
src/static/css/: style.css
src/static/js/: gamelogic.js
src/templates/layout/: base.html  navbar.html
src/templates/main/: about.html  index.html
src/utils/: __init__.py  formatters.py
src/views/: __init__.py  errors.py
src/views/main/: routes.py
static/js/: gamelogic.js
templates/errors/: 404.html  500.html
templates/layout/: base.html  navbar.html
tests/: conftest.py  test_models.py  test_views.py
